# cyclops_playground

./: .gitmodules  README.md
catkin_ws/: .gitignore
catkin_ws/src/cyclops_launch_script/: CMakeLists.txt  LICENSE  package.xml
catkin_ws/src/cyclops_launch_script/app/: container_launcher  initializer_plot  reset_button  reset_publisher
catkin_ws/src/cyclops_launch_script/config/: cyclops.backend.yaml  cyclops.frontend.yaml  cyclops.sensor.EuroC.yaml  cyclops.sensor.TUM.yaml  cyclops.sensor.yaml  cyclops.visual.rviz  orbslam.config.TUM.yaml  orbslam.config.yaml  orbslam.visual.rviz  vinsmono.EuroC.yaml  vinsmono.TUM.yaml  vinsmono.visual.rviz
catkin_ws/src/cyclops_launch_script/launch/: arguments.launch  dataset.launch  main.launch
catkin_ws/src/cyclops_launch_script/launch/components/: cyclops.launch  dataset.launch  orbslam.launch  vinsmono.launch
catkin_ws/src/cyclops_launch_script/tools/: compile_dataset.py  pull_dataset
catkin_ws/src/cyclops_launch_script/tools/allowed_datasets/: EuroC.sh  TUM.sh
