<?xml version="1.0"?>
<package format="2">
  <name>cyclops_launch_script</name>
  <version>0.0.0</version>
  <description>The ROS launch scripts for cyclops VIO pipeline</description>

  <maintainer email="cyclops.double.blind@gmail.com">cyclops</maintainer>
  <license>BSD-3Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
